--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
 *.gem
 *.rbc
 .bundle
