--- a/lib/yolo/config/config.yml
+++ b/lib/yolo/config/config.yml
@@ -14,4 +14,5 @@ mail:
 # Deployment settings
 deployment:
   url: http://example.com
-  apitoken: example
+  api_token: example
+  team_token: example
