--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
   - 1.9.3
-script: rspec spec
+script: bundle exec rspec spec
 notifications:
   email:
     - alex@alexefish.com
