Adding octokit and github token config key

--- a/lib/yolo/config/config.yml
+++ b/lib/yolo/config/config.yml
@@ -16,3 +16,8 @@ deployment:
   url: http://example.com
   api_token: example
   team_token: example
+
+# Github
+github:
+  username: username
+  password: password
